# railway_drf_deploy

./: .gitignore  Dockerfile  docker-compose.yaml  manage.py  pyproject.toml
core/: asgi.py  settings.py  urls.py  wsgi.py
database/: Dockerfile
