[tool.poetry]
name = "railway-drf-deploy"
version = "0.1.0"
description = "a test app for deploying to railway"
authors = ["Mattias Velamsson <smackdh@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
psycopg2 = "2.9.9"
python-dotenv="1.0.0"

[tool.poetry.group.dev.dependencies]
black="23.10.1"

[tool.black]
line_length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
